# Vyse

./: CONTRIBUTING.md  README.md
engine/: Cargo.toml  build.rs
engine/src/: config.rs  lib.rs
engine/src/defence/: mod.rs  numeric.rs  synonym.rs
engine/src/grpc/: mod.rs  service.rs
engine/src/scoring/: anomaly.rs  divergence.rs  entropy.rs  mod.rs  velocity.rs
engine/src/store/: logs.rs  mod.rs  session.rs
gateway/: .air.toml  .env.example  .golangci.yml  Makefile  config.toml  go.mod
gateway/internal/config/: config.go
gateway/internal/grpc/: client.go
gateway/internal/grpc/stub/: stub.go
gateway/internal/handlers/: infer.go
gateway/internal/middleware/: auth.go  ratelimit.go  session.go
gateway/internal/proto/: vyse.pb.go  vyse_grpc.pb.go
gateway/internal/server/: server.go
proto/: vyse.proto
